--- a/Project_group_24.ipynb
+++ b/Project_group_24.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Members: Yannemieke van Eijk, Pauline Hennink, Pauline Slieker, Marita van 't Klooster\n",
     "\n",
-    "Student numbers: ... - 4699718 - 4712617 - 5848210"
+    "Student numbers: 4920279 - 4699718 - 4712617 - 5848210"
    ]
   },
   {
