--- a/Project_group_24.ipynb
+++ b/Project_group_24.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Project Group - 24\n",
     "\n",
-    "Members: Yannemieke van Eijk, Pauline Hennink, Pauline Slieker, Marita van 't Klooster\n",
+    "Members: Yannemique van Eijk, Pauline Hennink, Pauline Slieker, Marita van 't Klooster\n",
     "\n",
     "Student numbers: 4920279 - 4699718 - 4712617 - 5848210"
    ]
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Yannemieke van Eijk**:\n",
+    "**Yannemique van Eijk**:\n",
     "- Brainstorming, looking for dataset, and defining research question\n",
     "\n",
     "**Pauline Hennink**:\n",
