Generalised the imported file name

--- a/Data preparation.ipynb
+++ b/Data preparation.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Emissions_to_air_on_Dutch_territory__mobile_sources_10102022_115433.csv')"
+    "df = pd.read_csv('All data.csv')"
    ]
   },
   {
