--- a/Data preparation.ipynb
+++ b/Data preparation.ipynb
@@ -73,7 +73,8 @@
     "df.columns=new_header\n",
     "\n",
     "df = df.reset_index()\n",
-    "df.columns.names = [' ']"
+    "df.columns.names = [' ']\n",
+    "df = df.rename(columns={'index': 'Year'})"
    ]
   },
   {
@@ -103,7 +104,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
+       "      <th>Year</th>\n",
        "      <th>Road traffic, total</th>\n",
        "      <th>Total inland shipping</th>\n",
        "      <th>Railways total</th>\n",
@@ -405,7 +406,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   index Road traffic, total Total inland shipping Railways total Aviation  \\\n",
+       "    Year Road traffic, total Total inland shipping Railways total Aviation  \\\n",
        "0   1990               24200                  1900            100      300   \n",
        "1   1991               24300                  1900            100      300   \n",
        "2   1992               25500                  1900            100      400   \n",
