--- a/Data preparation.ipynb
+++ b/Data preparation.ipynb
@@ -74,7 +74,10 @@
     "\n",
     "df = df.reset_index()\n",
     "df.columns.names = [' ']\n",
-    "df = df.rename(columns={'index': 'Year'})"
+    "df = df.rename(columns={'index': 'Year'})\n",
+    "df = df[df.Year >= '2012']\n",
+    "df = df.reset_index()\n",
+    "df = df.drop(columns=['index'])"
    ]
   },
   {
@@ -115,204 +118,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1990</td>\n",
-       "      <td>24200</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>300</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1991</td>\n",
-       "      <td>24300</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>300</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>25500</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>400</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>25500</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>400</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>25800</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>400</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1995</td>\n",
-       "      <td>25800</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>500</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1996</td>\n",
-       "      <td>26100</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>500</td>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>26600</td>\n",
-       "      <td>2200</td>\n",
-       "      <td>100</td>\n",
-       "      <td>500</td>\n",
-       "      <td>800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>27200</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>500</td>\n",
-       "      <td>800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>28600</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>600</td>\n",
-       "      <td>800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>28600</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>600</td>\n",
-       "      <td>900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>28900</td>\n",
-       "      <td>2200</td>\n",
-       "      <td>100</td>\n",
-       "      <td>600</td>\n",
-       "      <td>900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>29300</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>600</td>\n",
-       "      <td>900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2003</td>\n",
-       "      <td>29600</td>\n",
-       "      <td>2200</td>\n",
-       "      <td>100</td>\n",
-       "      <td>700</td>\n",
-       "      <td>900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>30200</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>30200</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>30100</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>30100</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>30000</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>29600</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>100</td>\n",
-       "      <td>700</td>\n",
-       "      <td>1300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>29600</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>29200</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>800</td>\n",
-       "      <td>1400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
        "      <td>2012</td>\n",
        "      <td>28700</td>\n",
        "      <td>2000</td>\n",
@@ -321,7 +126,7 @@
        "      <td>1400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>1</th>\n",
        "      <td>2013</td>\n",
        "      <td>28000</td>\n",
        "      <td>2000</td>\n",
@@ -330,7 +135,7 @@
        "      <td>1300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>2</th>\n",
        "      <td>2014</td>\n",
        "      <td>27800</td>\n",
        "      <td>2000</td>\n",
@@ -339,7 +144,7 @@
        "      <td>1400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>3</th>\n",
        "      <td>2015</td>\n",
        "      <td>28100</td>\n",
        "      <td>2100</td>\n",
@@ -348,7 +153,7 @@
        "      <td>1600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>4</th>\n",
        "      <td>2016</td>\n",
        "      <td>28900</td>\n",
        "      <td>2000</td>\n",
@@ -357,7 +162,7 @@
        "      <td>1300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>5</th>\n",
        "      <td>2017</td>\n",
        "      <td>29200</td>\n",
        "      <td>2100</td>\n",
@@ -366,7 +171,7 @@
        "      <td>1300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>6</th>\n",
        "      <td>2018</td>\n",
        "      <td>29400</td>\n",
        "      <td>2100</td>\n",
@@ -375,7 +180,7 @@
        "      <td>1700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <th>7</th>\n",
        "      <td>2019</td>\n",
        "      <td>29300</td>\n",
        "      <td>1900</td>\n",
@@ -384,7 +189,7 @@
        "      <td>1800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>8</th>\n",
        "      <td>2020</td>\n",
        "      <td>26100</td>\n",
        "      <td>1900</td>\n",
@@ -393,7 +198,7 @@
        "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <th>9</th>\n",
        "      <td>2021</td>\n",
        "      <td>26600</td>\n",
        "      <td>2000</td>\n",
@@ -406,73 +211,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    Year Road traffic, total Total inland shipping Railways total Aviation  \\\n",
-       "0   1990               24200                  1900            100      300   \n",
-       "1   1991               24300                  1900            100      300   \n",
-       "2   1992               25500                  1900            100      400   \n",
-       "3   1993               25500                  1900            100      400   \n",
-       "4   1994               25800                  1900            100      400   \n",
-       "5   1995               25800                  1900            100      500   \n",
-       "6   1996               26100                  1900            100      500   \n",
-       "7   1997               26600                  2200            100      500   \n",
-       "8   1998               27200                  2000            100      500   \n",
-       "9   1999               28600                  2000            100      600   \n",
-       "10  2000               28600                  2100            100      600   \n",
-       "11  2001               28900                  2200            100      600   \n",
-       "12  2002               29300                  2100            100      600   \n",
-       "13  2003               29600                  2200            100      700   \n",
-       "14  2004               30200                  2000            100      800   \n",
-       "15  2005               30200                  2000            100      800   \n",
-       "16  2006               30100                  1900            100      800   \n",
-       "17  2007               30100                  2000            100      800   \n",
-       "18  2008               30000                  1900            100      800   \n",
-       "19  2009               29600                  1700            100      700   \n",
-       "20  2010               29600                  1800            100      800   \n",
-       "21  2011               29200                  1900            100      800   \n",
-       "22  2012               28700                  2000            100      800   \n",
-       "23  2013               28000                  2000            100      800   \n",
-       "24  2014               27800                  2000            100      800   \n",
-       "25  2015               28100                  2100            100      800   \n",
-       "26  2016               28900                  2000            100      900   \n",
-       "27  2017               29200                  2100            100      900   \n",
-       "28  2018               29400                  2100            100      900   \n",
-       "29  2019               29300                  1900            100      900   \n",
-       "30  2020               26100                  1900            100      500   \n",
-       "31  2021               26600                  2000            100      500   \n",
+       "   Year Road traffic, total Total inland shipping Railways total Aviation  \\\n",
+       "0  2012               28700                  2000            100      800   \n",
+       "1  2013               28000                  2000            100      800   \n",
+       "2  2014               27800                  2000            100      800   \n",
+       "3  2015               28100                  2100            100      800   \n",
+       "4  2016               28900                  2000            100      900   \n",
+       "5  2017               29200                  2100            100      900   \n",
+       "6  2018               29400                  2100            100      900   \n",
+       "7  2019               29300                  1900            100      900   \n",
+       "8  2020               26100                  1900            100      500   \n",
+       "9  2021               26600                  2000            100      500   \n",
        "\n",
-       "   Seagoing shipping, inland  \n",
-       "0                        700  \n",
-       "1                        700  \n",
-       "2                        700  \n",
-       "3                        700  \n",
-       "4                        700  \n",
-       "5                        700  \n",
-       "6                        700  \n",
-       "7                        800  \n",
-       "8                        800  \n",
-       "9                        800  \n",
-       "10                       900  \n",
-       "11                       900  \n",
-       "12                       900  \n",
-       "13                       900  \n",
-       "14                      1000  \n",
-       "15                      1000  \n",
-       "16                      1000  \n",
-       "17                      1100  \n",
-       "18                      1400  \n",
-       "19                      1300  \n",
-       "20                      1300  \n",
-       "21                      1400  \n",
-       "22                      1400  \n",
-       "23                      1300  \n",
-       "24                      1400  \n",
-       "25                      1600  \n",
-       "26                      1300  \n",
-       "27                      1300  \n",
-       "28                      1700  \n",
-       "29                      1800  \n",
-       "30                      2000  \n",
-       "31                      2000  "
+       "  Seagoing shipping, inland  \n",
+       "0                      1400  \n",
+       "1                      1300  \n",
+       "2                      1400  \n",
+       "3                      1600  \n",
+       "4                      1300  \n",
+       "5                      1300  \n",
+       "6                      1700  \n",
+       "7                      1800  \n",
+       "8                      2000  \n",
+       "9                      2000  "
       ]
      },
      "execution_count": 7,
