--- a/Data preparation.ipynb
+++ b/Data preparation.ipynb
@@ -83,6 +83,21 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "613c7707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'] = df['Year'].astype(int)\n",
+    "df['Road traffic, total'] = df['Road traffic, total'].astype(int)\n",
+    "df['Total inland shipping'] = df['Total inland shipping'].astype(int)\n",
+    "df['Railways total'] = df['Railways total'].astype(int)\n",
+    "df['Aviation'] = df['Aviation'].astype(int)\n",
+    "df['Seagoing shipping, inland'] = df['Seagoing shipping, inland'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4c34a3be",
    "metadata": {},
    "outputs": [
@@ -211,32 +226,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year Road traffic, total Total inland shipping Railways total Aviation  \\\n",
-       "0  2012               28700                  2000            100      800   \n",
-       "1  2013               28000                  2000            100      800   \n",
-       "2  2014               27800                  2000            100      800   \n",
-       "3  2015               28100                  2100            100      800   \n",
-       "4  2016               28900                  2000            100      900   \n",
-       "5  2017               29200                  2100            100      900   \n",
-       "6  2018               29400                  2100            100      900   \n",
-       "7  2019               29300                  1900            100      900   \n",
-       "8  2020               26100                  1900            100      500   \n",
-       "9  2021               26600                  2000            100      500   \n",
+       "   Year  Road traffic, total  Total inland shipping  Railways total  Aviation  \\\n",
+       "0  2012                28700                   2000             100       800   \n",
+       "1  2013                28000                   2000             100       800   \n",
+       "2  2014                27800                   2000             100       800   \n",
+       "3  2015                28100                   2100             100       800   \n",
+       "4  2016                28900                   2000             100       900   \n",
+       "5  2017                29200                   2100             100       900   \n",
+       "6  2018                29400                   2100             100       900   \n",
+       "7  2019                29300                   1900             100       900   \n",
+       "8  2020                26100                   1900             100       500   \n",
+       "9  2021                26600                   2000             100       500   \n",
        "\n",
-       "  Seagoing shipping, inland  \n",
-       "0                      1400  \n",
-       "1                      1300  \n",
-       "2                      1400  \n",
-       "3                      1600  \n",
-       "4                      1300  \n",
-       "5                      1300  \n",
-       "6                      1700  \n",
-       "7                      1800  \n",
-       "8                      2000  \n",
-       "9                      2000  "
+       "   Seagoing shipping, inland  \n",
+       "0                       1400  \n",
+       "1                       1300  \n",
+       "2                       1400  \n",
+       "3                       1600  \n",
+       "4                       1300  \n",
+       "5                       1300  \n",
+       "6                       1700  \n",
+       "7                       1800  \n",
+       "8                       2000  \n",
+       "9                       2000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
